<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_stopper</name>
  <version>0.0.0</version>
  <description>A small helper node that stops and restarts ROS controllers based on a boolean status topic.</description>

  <author>Felix Exner</author>

  <maintainer email="grosse@fzi.de">Marvin Große Besselmann</maintainer>
  <maintainer email="lovro.ivanov@gmail.com">Lovro Ivanov</maintainer>
  <maintainer email="denis.stogl@picknik.ai">Denis Stogl</maintainer>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>

  <license>Apache License 2.0</license>

  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <!-- TODO: rosdep cannot find ur_client_library -->
  <depend>ur_bringup</depend>
  <depend>ur_controllers</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
