<?xml version="1.0"?>
<package format="2">
  <name>ur_calibration</name>
  <version>2.10.0</version>
  <description>Package for extracting the factory calibration from a UR robot and change it such that it can be used by ur_description to gain a correct URDF</description>

  <maintainer email="feex@universal-robots.com">Felix Exner</maintainer>
  <maintainer email="rsk@universal-robots.com">Rune Søe-Knudsen</maintainer>
  <maintainer email="ros@universal-robots.com">Universal Robots A/S</maintainer>

  <license>BSD-3-Clause</license>

  <author email="lovro.ivanov@gmail.com">Lovro Ivanov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ur_client_library</depend>
  <depend>ur_robot_driver</depend>

  <depend>eigen</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
