<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_controllers</name>
  <version>2.0.2</version>
  <description>Provides controllers that use the speed scaling interface of Universal Robots.</description>

  <author>Marvin Große Besselmann</author>
  <author>Lovro Ivanov</author>

  <maintainer email="grosse@fzi.de">Marvin Große Besselmann</maintainer>
  <maintainer email="lovro.ivanov@gmail.com">Lovro Ivanov</maintainer>
  <maintainer email="denis.stogl@picknik.ai">Denis Stogl</maintainer>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>

  <license>Apache License 2.0</license>

  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
