<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_controllers</name>
  <version>2.2.15</version>
  <description>Provides controllers that use the speed scaling interface of Universal Robots.</description>

  <maintainer email="denis@stoglrobotics.de">Denis Stogl</maintainer>
  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
  <maintainer email="wilbrandt@fzi.de">Robert Wilbrandt</maintainer>

  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>

  <author email="grosse@fzi.de">Marvin Große Besselmann</author>
  <author email="lovro.ivanov@gmail.com">Lovro Ivanov</author>
  <author email="zelenak@picknik.ai">Andy Zelenak</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>ur_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
