<package format="3">
  <name>ur_dashboard_msgs</name>
  <version>0.0.0</version>
  <description>Messages around the UR Dashboard server.</description>

  <maintainer email="exner@FZI.de">Felix Exner</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
